// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EigenPodOwner delegation operator manager can undelegate 1`] = `
Object {
  "calldataByteLength": 4,
  "gasUsed": 146611,
}
`;

exports[`EigenPodOwner delegation operators manager can delegate 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 118993,
}
`;

exports[`EigenPodOwner upgrade succeeds to upgrade 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 37475,
}
`;

exports[`EigenPodOwner withdrawals can claim delayed withdrawals 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 98777,
}
`;

exports[`EigenPodOwner withdrawals withdrawals manager can complete withdrawal 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 115980,
}
`;

exports[`EigenPodOwner withdrawals withdrawals manager can queue withdrawal 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 136023,
}
`;
